src/Tests/Spectre.Console.Cli.Tests/Expectations/Parsing/OptionWithoutName/Test_1.Output.verified.txt
Error: Option does not have a name.

       dog -
           ^ Did you forget the option name?